fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -174,8 +174,7 @@ html {
     box-shadow: 0px -2px 3px 2px rgba(0, 0, 0, 0.288);
 }
 
-.footer__section--left,
-.footer__section--right {
+.footer__section {
     text-align: center;
 }
 
